--- a/app/dagger2test/build.gradle
+++ b/app/dagger2test/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.bigmeco.mvitest"
+        applicationId "com.bigmeco.dagger2test"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -44,8 +44,12 @@ android {
 }
 
 
-
 dependencies {
+
+    implementation 'com.google.dagger:dagger-android:2.28'
+    implementation 'com.google.dagger:dagger-android-support:2.28' // if you use the support libraries
+    kapt 'com.google.dagger:dagger-android-processor:2.28'
+    kapt 'com.google.dagger:dagger-compiler:2.28'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
@@ -61,7 +65,4 @@ dependencies {
     implementation "androidx.ui:ui-layout:$compose_version"
     implementation "androidx.ui:ui-material:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
