--- a/app/mvitest/build.gradle
+++ b/app/mvitest/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'kotlin-kapt'
 
 }
-def compose_version = "0.1.0-dev10"
 
 android {
     compileSdkVersion 29
@@ -47,17 +46,17 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     kapt "androidx.compose:compose-compiler:$compose_version"
     implementation "androidx.compose:compose-runtime:$compose_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation "androidx.ui:ui-framework:$compose_version"
+    implementation "androidx.ui:ui-core:$compose_version"
     implementation "androidx.ui:ui-layout:$compose_version"
     implementation "androidx.ui:ui-material:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
