--- a/app/dagger2test/build.gradle
+++ b/app/dagger2test/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'kotlin-kapt'
 
 }
-def compose_version = "0.1.0-dev10"
 
 android {
     compileSdkVersion 29
@@ -58,10 +57,10 @@ dependencies {
     kapt "androidx.compose:compose-compiler:$compose_version"
     implementation "androidx.compose:compose-runtime:$compose_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.core:core-ktx:$ktx_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation "androidx.ui:ui-framework:$compose_version"
+    implementation "androidx.ui:ui-core:$compose_version"
     implementation "androidx.ui:ui-layout:$compose_version"
     implementation "androidx.ui:ui-material:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
