--- a/app/mvitest/build.gradle
+++ b/app/mvitest/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     kapt "androidx.compose:compose-compiler:$compose_version"
     implementation "androidx.compose:compose-runtime:$compose_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation "androidx.core:core-ktx:$ktx_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation "androidx.ui:ui-core:$compose_version"
