--- a/app/coroutinestest/build.gradle
+++ b/app/coroutinestest/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation "androidx.ui:ui-framework:$compose_version"
+    implementation "androidx.ui:ui-core:$compose_version"
     implementation "androidx.ui:ui-layout:$compose_version"
     implementation "androidx.ui:ui-material:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
