--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,3 +19,5 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Make gradlew executable
+        run: chmod +x ./gradlew
