--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 custom: ["Чтобы_писал_лучше_код"]
-patreon: https://www.patreon.com/bigmeco
+patreon: bigmeco
