--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,5 +17,5 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Unit tests
-        run: bash ./gradlew lintDebug --stacktrace
+      - name: build tests
+        run: bash ./gradlew build --stacktrace
